--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss';
 
-@import "tailwindcss";
+@layer components {
+  h1 {
+    @apply text-2xl font-bold my-3;
+  }
+
+  button {
+    @apply px-8 py-2 transition-all duration-200 rounded-full disabled:opacity-50 cursor-pointer disabled:cursor-not-allowed;
+  }
+
+  button.primary {
+    @apply bg-sky-600 hover:bg-sky-700 text-white;
+  }
+
+  button.secondary {
+    @apply bg-slate-200 hover:bg-slate-300;
+  }
+
+  button.danger {
+    @apply bg-red-600 hover:bg-red-700 text-white;
+  }
+
+  textarea {
+    @apply w-full p-3 border border-gray-300 rounded-lg resize-y min-h-[100px];
+  }
+
+  .file-input {
+    @apply file:px-8 file:py-2 file:rounded-full file:bg-slate-100;
+  }
+}
+
+@layer utilities {
+  .page {
+    @apply mx-auto max-w-5xl my-6 px-3;
+  }
+}
