refactor: replace textual loading indicators with a dedicated loader component

--- a/src/app/pages/demo2-ask/ask.html
+++ b/src/app/pages/demo2-ask/ask.html
@@ -3,7 +3,7 @@
   <textarea [field]="form.text" placeholder="Ask..."></textarea>
 
   @if (contentResource.isLoading()) {
-  <div>Loading...</div>
+  <app-loader />
   }
   <ul class="text-red-500 mt-2">
     @for (error of form.text().errors(); track $index) {
