feat: Update Angular dependencies to 21.1.0-rc.0 and migrate `Field` to `FormField` in forms/signals API.

--- a/src/app/pages/demo2-ask/ask.html
+++ b/src/app/pages/demo2-ask/ask.html
@@ -1,13 +1,13 @@
 <h1>Demo 2: ask</h1>
 <form (submit)="ask($event)">
-  <textarea [field]="form.text" placeholder="Ask..."></textarea>
+  <textarea [formField]="form.text" placeholder="Ask..."></textarea>
 
   @if (contentResource.isLoading()) {
-  <app-loader />
+    <app-loader />
   }
   <ul class="text-red-500 mt-2">
     @for (error of form.text().errors(); track $index) {
-    <li>{{ error.message }}</li>
+      <li>{{ error.message }}</li>
     }
   </ul>
 
@@ -17,9 +17,9 @@
   </div>
 
   @if (contentResource.error()?.message) {
-  <div class="p-4 bg-red-100 text-red-800 rounded mt-4">Gemini Error</div>
+    <div class="p-4 bg-red-100 text-red-800 rounded mt-4">Gemini Error</div>
   } @else {
-  <div>{{ contentResource.value() }}</div>
+    <div>{{ contentResource.value() }}</div>
   }
   <pre class="mt-4">{{ data() | json }}</pre>
 </form>
