--- a/src/app/pages/demo3-ask/ask.html
+++ b/src/app/pages/demo3-ask/ask.html
@@ -1,15 +1,15 @@
 <h1>Demo 3: ask</h1>
 
 <form (submit)="ask($event)">
-  <textarea [field]="form.text" placeholder="Ask..."></textarea>
-  <app-upload-file [field]="form.base64" />
+  <textarea [formField]="form.text" placeholder="Ask..."></textarea>
+  <app-upload-file [formField]="form.base64" />
 
   @if (geminiService.contentResource.isLoading()) {
-  <app-loader />
+    <app-loader />
   }
   <ul class="text-red-500 mt-2">
     @for (error of form.text().errors(); track $index) {
-    <li>{{ error.message }}</li>
+      <li>{{ error.message }}</li>
     }
   </ul>
 
@@ -19,9 +19,9 @@
   </div>
 
   @if (geminiService.contentResource.error()?.message) {
-  <div class="p-4 bg-red-100 text-red-800 rounded mt-4">Gemini Error</div>
+    <div class="p-4 bg-red-100 text-red-800 rounded mt-4">Gemini Error</div>
   } @else {
-  <div [innerHTML]="markdown()" class="mt-4"></div>
+    <div [innerHTML]="markdown()" class="mt-4"></div>
   }
   <pre class="mt-4">{{ data() | json }}</pre>
 </form>
