style: Add `flex-wrap` and change `h-18` to `min-h-18` for the navbar container.

--- a/src/app/core/navbar/navbar.html
+++ b/src/app/core/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center gap-3 border-b py-3 bg-slate-100 h-18">
+<div class="flex flex-wrap justify-center gap-3 border-b py-3 bg-slate-100 min-h-18">
   <button class="primary" routerLink="/home">Home</button>
   <button class="primary" routerLink="/ask">Ask</button>
   <button class="primary" routerLink="/ask2">Ask2</button>
