refactor: improve layout of multimodal and image attachment pages with sticky sidebars and update navbar text.

--- a/src/app/core/navbar/navbar.html
+++ b/src/app/core/navbar/navbar.html
@@ -3,7 +3,7 @@
   <button class="primary" routerLink="/ask">Ask</button>
   <button class="primary" routerLink="/ask2">Ask2</button>
   <button class="primary" routerLink="/ask3">Ask3</button>
+  <button class="primary" routerLink="/demo5-multimodal">Ask 4 / files</button>
   <button class="primary" routerLink="/chat">Chat</button>
   <button class="primary" routerLink="/images">Images</button>
-  <button class="primary" routerLink="/demo5-multimodal">Demo5 Multimodal</button>
 </div>
